# RareLink

./: .dockerignore  .env.example  .gitignore  DEMO.md  LICENSE  Makefile  README.en.md  README.md  package.json  pyproject.toml
configs/: agent-redteam-cases.json
data/: README.md
deploy/: Dockerfile.spark  Dockerfile.web  compose.spark.yml  spark-local-llm.env.example
docs/: architecture.md  deployment.md  progress.md  references.md
outputs/: DGX-Spark-Hackathon-赛事需求.md  DGX-Spark-实机验证报告.md  RareLink-2026-07-17-DGX-Spark系统移植与实机实验正式报告.md  RareLink-2026-07-20-MSD真实影像Spark联邦运行报告.md  RareLink-DGX-Spark黑客松十日谈.md  RareLink-NVIDIA-Inception-项目介绍与企业化路线.md  RareLink-三分钟演示视频脚本.md  RareLink-企业化一页路线图.md  RareLink-四项获奖升级实机报告.md  RareLink-技术栈说明.md  RareLink-最终提交清单.md  RareLink-比赛项目说明.md  RareLink-真人口播分段录音稿-无时间轴.md  RareLink-真人口播录音稿.md  RareLink-路演PPT双语内容.md  RareLink-项目开发规格书.md  RareLink-项目报告书.md  RareLink_稀联_20页_实机截图证据更新版.pptx  RareLink_稀联_20页_本地LLM证据链更新.pptx  RareLink_稀联_20页_真实MSD_Spark更新版.pptx  项目剖析-RareLink罕见病联邦科研终端.md
rarelink/: __init__.py  config.py  database.py  domain.py  models.py
scripts/: benchmark_spark_local_llm.py  bootstrap_spark.sh  capture_cross_device_mtls_evidence.py  capture_mtls_runtime_evidence.py  capture_spark_local_inference_evidence.py  device_runtime_descriptor.py  inspect_spark.sh  nvflare_monai_client.py  prepare_demo_data.py  prepare_msd_brain_tumour.py  prepare_public_mni152_validation.py  provision_secure_federation.py  review_demo.sh  run_agent_redteam.py  run_flare_client_probe.py  run_nvflare_simulation.py  run_repeated_benchmark.py  (+13 more)
(+66 files in other folders)
