[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rarelink"
version = "0.1.0"
description = "Agentic federated research console for rare disease studies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlmodel>=0.0.22,<1",
  "pydantic-settings>=2.6,<3",
  "openai>=1.55,<2",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]
spark = [
  "monai>=1.4,<2",
  "numpy>=2,<3",
  "nibabel>=5.3,<6",
  "nvflare>=2.7,<2.9",
  "opacus>=1.5,<2",
  "scipy>=1.14,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["rarelink"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
